src/pages/Club/Club/Club.less
h2.ant-typography,
h3.ant-typography,
h4.ant-typography {
    text-align: center;
    color: #3c5438;
}

.clubProfile {
    .ant-card-body {
        padding-top: 10px;
        height: 100%;
        position: relative;
        display: flex;
        flex-direction: column;
    }

    .clubCard {
        height: 100%;
        text-align: center;
        cursor: default;

        .clubPhotos {
            .clubLogo {
                width: 100%;
                height: auto;
                max-height: 360px;
            }
            
            .mainMap {
                display: block;
                width: 100%;
                height: 100%;
                border: none;
                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
                transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
              }
              
              .mainMap:hover {
                box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
              }
        }

        .clubInfo {
            .ant-typography {
                margin-top: 0.2rem;
                margin-bottom: 0;
            }

            .clubHead {
                margin-top: 20px;
            }
        }

        .clubMoreButton {
            margin: auto 0 0;

            .clubInfoButton {
                width: 160px;
            }

            .addReportIcon {
                font-size: 30px;
                color: #3c5438;
                position: absolute;
                bottom: 25px;
                right: 3%;
            }

            @media (min-width: 375px) {
                .addReportIcon {
                    right: calc(50% - 140px);
                }
            }
        }

        .clubButtons {
            margin-top: 25px;

            .clubInfoButton {
                width: 160px;
            }

            @media (max-width: 575px) {
                .clubInfoButton {
                    margin-bottom: 10px;
                }
            }

            .clubInfoIcon {
                font-size: 28px;
            }
            .clubInfoIconDelete{
                font-size: 28px;
                color: #910202;
            }
            .clubInfoIconDelete :hover{
                color: #690606;
                cursor: pointer;
            }

            @media (max-width: 575px) {
                .clubIcons {
                    justify-content: center;
                }
            }
        }

        .clubItems {
            .clubMemberItem {
                cursor: pointer;

                .addFollower {
                    color: #3c5438;
                }
                
                .approveIcon {
                    color: #3c5438;
                    position: absolute;
                    bottom: 55px;
                    right: calc(50% - 50px);
                    font-size: 22px;
                }

                .approveIcon :hover {
                    color: #536150;
                    font-size: 28px;
                }
            }

            .clubMemberItem :hover {
                text-decoration: underline;
            }

            .clubDocumentItem {
                cursor: pointer;

                .documentIcon {
                    font-size: 60px;
                }

                .documentText {
                    overflow: hidden;
                    text-overflow: ellipsis;
                    display: -webkit-box;
                    -webkit-line-clamp: 3;
                    -webkit-box-orient: vertical;
                }
            }

            .userName {
                overflow: hidden;
                text-overflow: ellipsis;
                display: -webkit-box;
                -webkit-line-clamp: 1;
                -webkit-box-orient: vertical;
                margin: 0px;
            }
        }
    }
}

.clubMoreItems {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
      
    .clubMember :hover{
        cursor: pointer;
    }
      
    .detailsCard {
        margin: 15px;
        width: 242px;
        text-align: center;

        
        .detailsMeta {
            margin-top: 10px;
            
            .ant-card-meta-title {
                white-space: normal;
                display: -webkit-box;
                -webkit-line-clamp: 2;
                -webkit-box-orient: vertical;
            }
        }
    }
    
    .backButton {
        width: 180px;
        background-color: #3c5438;
        color: white;
    }
}

